syntax = "proto3";
package rashop.customer.v1;
option go_package = "rashop/proto/gen/go/customer/v1";

import "google/protobuf/timestamp.proto";

message Address {
  string id = 1;
  string street_address_1 = 2;
  string street_address_2 = 3;
  string city = 4;
  string state = 5;
  uint32 postal_code = 6;
  google.protobuf.Timestamp last_modified_time = 7;
  google.protobuf.Timestamp created_time = 8;
}

message Voucher {
  string id = 1;
  google.protobuf.Timestamp added_time = 2;
}

message Customer {
  string id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  uint64 balance = 6;
  uint64 point = 7;
  bool is_verified = 8;
  bool is_disabled = 9;
  repeated Address shipping_addresses = 10;
  repeated Voucher vouchers = 11;

  google.protobuf.Timestamp last_modified_time = 12;
  google.protobuf.Timestamp created_time = 13;
}
