syntax = "proto3";
package rashop.media.v1;
option go_package = "rashop/proto/gen/go/media/v1";

import "google/protobuf/timestamp.proto";

enum Usage {
  OneTime = 0;
  Full = 1;
}

message MediaMetadata {
  string id = 1;
  string name = 2;
  Usage usage = 3;
  string content_type = 4;
  uint64 size = 5;
  string url = 6;
  bool is_public = 7;
  optional google.protobuf.Timestamp last_modified = 8;
  google.protobuf.Timestamp stored_at = 9;
}